--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,20 +25,16 @@ pipeline{
         }
         stage('Package helm chart and push') {
             steps{
-                timeout(time: 15, unit: "SECONDS") {
-
-                    input message: 'approve the helm push?', ok: 'Yes'
-
-                }
                 script{
                     sh """
-                    minor_version=\$(grep 'version:' ./chart/worker/Chart.yaml | awk -F '.' '{print \$2}')
-                    new_minor_version=`expr \$minor_version + 1`
-                    cp ./chart/worker/Chart.yaml chart.yaml.tmp && sed "/^\\([[:space:]]*version: \\).*/s//\\10.\${new_minor_version}.0/" < chart.yaml.tmp >./chart/worker/Chart.yaml && rm -f chart.yaml.tmp
+                    cp ./chart/worker/Chart.yaml chart.yaml.tmp && sed "/^\\([[:space:]]*version: \\).*/s//\\10.\${BUILD_NUMBER}.0/" < chart.yaml.tmp >./chart/worker/Chart.yaml && rm -f chart.yaml.tmp
                     echo \${dockertoken} | helm registry login registry-1.docker.io -u vikasharya000 --password-stdin
                     helm package ./chart/worker/
-                    helm push helm_worker-0.\${new_minor_version}.0.tgz oci://registry-1.docker.io/vikasharya000
+                    helm push helm_worker-0.\${BUILD_NUMBER}.0.tgz oci://registry-1.docker.io/vikasharya000
                     """
+                    build job: "voting-app-chart", wait: true,parameters: [
+                    string(name: 'workerChartVersion', value: "0.${BUILD_NUMBER}.0")
+                    ]
                 }
             }
         }
