add update chart docker image

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -28,6 +28,7 @@ pipeline{
                 script{
                     sh """
                     cp ./chart/worker/Chart.yaml chart.yaml.tmp && sed "/^\\([[:space:]]*version: \\).*/s//\\10.\${BUILD_NUMBER}.0/" < chart.yaml.tmp >./chart/worker/Chart.yaml && rm -f chart.yaml.tmp
+                    cp ./chart/worker/values.yaml values.yaml.tmp && sed 's/vikasharya000\\/worker/vikasharya000\\/worker:${BUILD_NUMBER}/g' < values.yaml.tmp >./chart/worker/values.yaml && rm -f values.yaml.tmp
                     echo \${dockertoken} | helm registry login registry-1.docker.io -u vikasharya000 --password-stdin
                     helm package ./chart/worker/
                     helm push helm_worker-0.\${BUILD_NUMBER}.0.tgz oci://registry-1.docker.io/vikasharya000
