add global config in value.yaaml

--- a/chart/worker/templates/deployment-blue.yaml
+++ b/chart/worker/templates/deployment-blue.yaml
@@ -1,10 +1,11 @@
+{{if .Values.global.blue.enabled}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: worker-blue
   labels:
     tier: worker
     app: voting-app
-  name: worker
 spec:
   replicas: 1
   selector:
@@ -14,7 +15,9 @@ spec:
     metadata:
       labels:
         tier: worker
+        slot: blue
     spec:
       containers:
       - image: {{.Values.image}}
         name: worker
+{{end}}
